Bug 1676651 - don't warn to console if a cookie is deleted r=dveditz

Differential Revision: https://phabricator.services.mozilla.com/D175563